PROJECT(topographic)

FIND_PATH(SVMLIGHT_INCLUDE_DIR SvmLightLib.h)

FIND_LIBRARY(SVMLIGHT_LIBRARY SVMLightLib)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include
					${SVMLIGHT_INCLUDE_DIR})

FILE(GLOB SRCS "src/*.c" "src/*.cpp")
FILE(GLOB HDRS "include/*.h")

ADD_EXECUTABLE(topographic ${SRCS} ${HDRS})

TARGET_LINK_LIBRARIES(topographic ${OpenCV_LIBS} ${SVMLIGHT_LIBRARY})

